4399第一个版本

--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@ var _hmt = _hmt || [];
 </head>
 
 <body>
-  <!-- <script src="http://h.api.4399.com/h5mini-2.0/h5api-interface.php"></script> -->
+ <script src="http://h.api.4399.com/h5mini-2.0/h5api-interface.php"></script>
+
+
+
   <div id="root">
     <div class="load">
       <div class="loader">加载中...</div>
